Revision history for Perl extension Net::Amazon:

0.21 (not yet released)
   (ms) Tatsuhiko Miyagawa <miyagawa@livedoor.jp> provided a patch to
        adapt N:A for Amazon's change of "locale=jp" requests, which 
        should be sent to xml.amazon.co.jp, instead of xml.amazon.com:
        http://forums.prospero.com/n/mb/message.asp?webtag=am-assocdevxml&msg=4629.1&ctx=4096

0.20 (03/08/2004)
   (ms) rayg <rayg@varchars.com> added textstream search and support
        for sorting results.
   (ms) added directors(), director() and starring() to DVD.pm

0.19 (02/13/2004)
   (ms) Michael Coulter <mjc@bitz.ca> noticed that eg/review had the
        wrong path to Review.pm.
   (ms) Sam Smith <s@msmith.net> noticed that the dependency on
        LWP::UserAgent was missing from the documentation.
   (ms) Bill Fitzpatrick provided a patch implementing and testing
        Manufacturer searches.

0.18 (12/22/2003)
   (ms) Brian Hirt <bhirt@mobygames.com> provided a patch for
        multiple error messages returned by some requests to AMZN.
        There's two accessors now, Response->messages() returning
        a ref to an array of error messages, and Response->message()
        returning them stringed together for backwards compatibility.
   (ms) Padraic Renaghan <padraic@renaghan.com> provided a patch
        for access to upc/media/nummedia fields in Music.pm
   (ms) Fixed test suite warnings with perl 5.8.2 in N::A::Property::Book.

0.17 (11/18/2003)
   (ms) Robert Graff <rgraff@workingdemo.com> provided a patch for 
        'blended' searches.

0.16 (10/10/2003)
   (ms) Replaced 'legacy call' onca/xml2 by onca/xml3, according to 
        the AWS newsletter.
   (ms) Martin Streicher <martin.streicher@apress.com> enhanced the
        "power" search script (in /eg) to limit searches to page
        ranges if so requested.

0.15 (08/24/2003)
   (ms) Martin Streicher <martin.streicher@apress.com> provided support