@@ -5,6 +5,7 @@ Revision history for Perl extension Net::Amazon:
         adapt N:A for Amazon's change of "locale=jp" requests, which 
         should be sent to xml.amazon.co.jp, instead of xml.amazon.com:
         http://forums.prospero.com/n/mb/message.asp?webtag=am-assocdevxml&msg=4629.1&ctx=4096
+   (ms) added tracks() to N:A::Properties::Music to list track titles of CDs
 
 0.20 (03/08/2004)
    (ms) rayg <rayg@varchars.com> added textstream search and support
